--- a/package.json
+++ b/package.json
@@ -15,13 +15,17 @@
 		"react-infinite-scroll-component": "^6.1.0",
 		"react-lazy-load-image-component": "^1.5.6",
 		"react-router-dom": "^6.6.1",
-		"sass": "^1.57.1",
 		"unsplash-js": "^7.0.15"
 	},
 	"devDependencies": {
 		"@types/react": "^18.0.26",
 		"@types/react-dom": "^18.0.9",
-		"@vitejs/plugin-react": "^3.0.0",
-		"vite": "^4.0.0"
-	}
+		"@vitejs/plugin-react": "^5.1.2",
+		"sass": "^1.97.3",
+		"vite": "^7.3.1"
+	},
+	"volta": {
+		"node": "24.13.0"
+	},
+	"packageManager": "pnpm@10.15.1"
 }
